--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            background-image: url('images/shared image (3).jpg');
+            background-image: url('shared image (3).jpg');
             min-height: 100%;
         }
 
