--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .bgimg {
             background-position: center;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: calc(85%);
             background-image: url('shared image (3).jpg');
             min-height: 100%;
         }
@@ -98,7 +98,7 @@
             <img src="images/shared image (3).jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000"
                 height="1333">
             <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-                <a href="Chitrankan Mulam CV.pdf" download="Chitrankan Mulam">
+                <a href="Chitrankan Mulam CV 2.pdf" download="Chitrankan Mulam">
                     <i class="fa fa-download"></i> Download Resume
             </button></a>
         </header>
@@ -108,16 +108,12 @@
         <div class="w3-content w3-justify w3-text-grey w3-padding-20" id="about">
             <h2>About Me</h2>
             <hr class="w3-opacity">
-            <p>Seeking a dynamic and challenging career within an organization where I can make meaningful
-                contributions.
-                Aim to leverage my professional expertise and interpersonal skills for mutual growth.
-                Proven ability to excel under pressure with a strong professional attitude.
-                Advanced time management skills and commitment to delivering impactful results.
-                Exceptional classroom management capabilities and acute attention to detail.
-                Strong communication skills driven by a dedication to inspire students to fully embrace their
-                creativity.
-                Emphasis on positive reinforcement, fostering each student's confidence and motivation to succeed.
-                Creating an environment where creativity thrives, and students feel empowered.
+            <p>As an artist and ICT teacher, I bridge the worlds of creativity and technology, fostering a dynamic
+                learning environment where students explore the intersection of visual arts and digital tools. With a
+                passion for both traditional art forms and innovative digital techniques, I guide students in developing
+                their artistic voice while equipping them with essential digital skills. My teaching philosophy
+                emphasizes experimentation, critical thinking, and the use of technology as a medium for self-expression
+                and problem-solving in today’s ever-evolving creative landscape.
             </p>
 
 
@@ -126,8 +122,9 @@
             <div class="w3-content w3-container w3-padding-64" id="portfolio">
                 <h2 class="w3-padding-16">My Work</h2>
                 <hr>
-                <p class="w3">Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to
-                        make them bigger</p><br>
+                <p class="w3">A fusion of personal artistic exploration and the imaginative creations of students,
+                    highlighting the dynamic interplay between individual expression and collaborative learning.<br>
+                    (Click on the images to make them bigger)</p><br>
 
                 <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
                 <div class="w3-row-padding w3-center">
@@ -234,7 +231,7 @@
             </div>
 
             <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-                <a href="Chitrankan Mulam CV.pdf" download="Chitrankan Mulam">
+                <a href="Chitrankan Mulam CV 2.pdf" download="Chitrankan Mulam">
                     <i class="fa fa-download"></i> Download Resume
             </button></a>
 
@@ -250,21 +247,32 @@
             <hr>
             <img src="/w3images/avatar_smoke.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right"
                 style="width:80px">
-            <p><span class="w3-large w3-text-black w3-margin-right">Chandler Bing.</span> Web Designer.</p>
-            <p>Jane Doe is just awesome. I am so happy to have met her!</p><br>
+            <p><span class="w3-large w3-text-black w3-margin-right">Priyadarshini M.</span> Art Teacher, Child
+                Psychologist.</p>
+            <p>"Chitrankan is an exceptional educator who blends creativity with technology, inspiring students to
+                explore their artistic potential and express themselves with confidence."</p><br>
 
             <img src="/w3images/bandmember.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right"
                 style="width:80px">
-            <p><span class="w3-large w3-text-black w3-margin-right">Chris Fox.</span> CEO at Mighty Schools.</p>
-            <p>Jane Doe saved us from a web disaster.</p><br>
+            <p><span class="w3-large w3-text-black w3-margin-right">Ruth Mendis</span> Content Creator, Digital
+                Marketing</p>
+            <p>"Thanks to your guidance, I've been able to enhance my sketching and art skills, merging my content
+                creation passion with a deeper understanding of visual storytelling."</p><br>
 
             <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right"
                 style="width:80px">
-            <p><span class="w3-large w3-text-black w3-margin-right">Rebecca Flex.</span> CEO at Company.</p>
-            <p>No one is better than Jane Doe.</p><br>
+            <p><span class="w3-large w3-text-black w3-margin-right">Ayaan Mehta</span> Student, Aditya Birla School</p>
+            <p>"Over the past four years, I have learned and grown in art under your guidance, exploring various
+                techniques and art forms that have helped me develop my skills and creativity."</p><br>
+
+            <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="w3-left w3-circle w3-margin-right"
+                style="width:80px">
+            <p><span class="w3-large w3-text-black w3-margin-right">Dr. Suchitra Hari</span> Bach Flower Trainer</p>
+            <p>"Your expertise in design has been invaluable in bringing my brand vision to life, creating stunning
+                logos and product designs that perfectly reflect the essence of my practice."</p><br>
 
             <!-- Grid for pricing tables -->
-            <h2 class="w3-padding-16">My Price</h2>
+            <!-- <h2 class="w3-padding-16">My Price</h2>
             <hr>
             <div class="w3-row-padding" style="margin:0 -16px">
                 <div class="w3-third w3-margin-bottom">
@@ -275,7 +283,7 @@
                         <li class="w3-padding-16">Personlised Sketch</li>
                         <li class="w3-padding-16">Canvas Painting</li>
                         <li class="w3-padding-16">
-                            <!-- <h6>Starting</h6> -->
+                            <h6>Starting</h6>
                             <h2>INR 2000</h2>
                             <span class="w3">Per Design *</span>
                         </li>
@@ -318,7 +326,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
             <!-- <h3 class="w3-padding-16">My Price</h3>
             <div class="w3-row-padding" style="margin:0 -16px">
                 <div class="w3-half w3-margin-bottom">
@@ -370,6 +378,31 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d941.8050405314868!2d73.04975029081105!3d19.229234403382968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7bfd4d4b4c105%3A0x11f9cecd8c54b4b0!2sCasa%20Greenville%20H!5e0!3m2!1sen!2sin!4v1737616156518!5m2!1sen!2sin"
                 width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+            <style>
+                .map-container {
+                    position: relative;
+                    padding-bottom: 56.25%;
+                    /* Aspect ratio of 16:9 */
+                    height: 0;
+                    overflow: hidden;
+                    max-width: 100%;
+                }
+
+                .map-container iframe {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                }
+            </style>
+
+            <div class="map-container">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d941.8050405314868!2d73.04975029081105!3d19.229234403382968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7bfd4d4b4c105%3A0x11f9cecd8c54b4b0!2sCasa%20Greenville%20H!5e0!3m2!1sen!2sin!4v1737616156518!5m2!1sen!2sin"
+                    width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
 
             <div class="w3-section">
                 <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Mumbai, India</p>
