--- a/photos.html
+++ b/photos.html
@@ -30,101 +30,214 @@
   <div class="w3-content" style="max-width:1500px">
 
     <!-- Header -->
-    <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
+    <header class="w3-container w3-center" style="padding:50px 16px; color: black;" id="home">
+      <h1 class="w4-jumbo"><b>CHITRANKAN MULAM</b></h1>
       <h1 class="w3-xlarge">ARTIST</h1>
-      <h1>CHITRANKAN MULAM</h1>
 
-      
+
       <div class="w3-padding-32">
         <div class="w3-bar w3-border">
           <a href="index.html" class="w3-bar-item w3-button">Home</a>
           <a href="#personal" class="w3-bar-item w3-button" onclick="closeNav()">Personal</a>
           <a href="#students" class="w3-bar-item w3-button" onclick="closeNav()">Students</a>
-          <a href="#shoot" class="w3-bar-item w3-button">Shoot</a>
+          <a href="#shoot" class="w3-bar-item w3-button" onclick="closeNav()">Shoot</a>
         </div>
       </div>
     </header>
 
     <!-- Photo Grid -->
+    
+    <style>
+        body {
+            background-color: lightgray;
+            /* Dark grey background */
+            color: white;
+            /* White text for better contrast */
+            font-family: Arial, sans-serif;
+        }
 
-    <h3 id="personal" class="w3-center w3-text-grey">Personal</h3>
-    <div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
-      <div class="w3-half">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/falls2.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-        <img src="/w3images/nature.jpg" style="width:100%">
-        <img src="/w3images/mist.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-      </div>
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 50px 20px;
+            text-align: center;
+        }
 
-      <div class="w3-half">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-        <img src="/w3images/ocean.jpg" style="width:100%">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/mountainskies.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-      </div>
+        h3 {
+            text-transform: uppercase;
+            color: darkslategray;
+        }
+
+        hr {
+            height: 1.5px;
+            background-color: darkslategray;
+            border: none;
+            margin-bottom: 20px;
+        }
+
+        .image-grid {
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+            gap: 15px;
+            padding: 20px;
+            background: rgba(74, 74, 74, 0.837);
+            border-radius: 10px;
+        }
+
+        .image-grid img {
+            width: 100%;
+            height: auto;
+            cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            border-radius: 8px;
+        }
+
+        .image-grid img:hover {
+            transform: scale(1.05);
+            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
+        }
+
+        .wide {
+            grid-column: span 2;
+        }
+
+        /* Fullscreen Modal */
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .modal img {
+            max-width: 90%;
+            max-height: 90%;
+            border-radius: 10px;
+        }
+
+        .close {
+            position: absolute;
+            top: 20px;
+            right: 30px;
+            font-size: 30px;
+            color: white;
+            cursor: pointer;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .image-grid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .image-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="container">
+        <h3 id="personal">Personal</h3>
+        <hr>
+        <div class="image-grid">
+            <img src="Photos/Personal/P1.jpg" onclick="openModal(this)">
+            <img src="Photos/Personal/P2.jpg" onclick="openModal(this)">
+            <img src="Photos/Personal/P3.jpg" class="wide" onclick="openModal(this)">
+            <img src="Photos/Personal/P4.jpg" onclick="openModal(this)">
+            <img src="Photos/Personal/P5.jpg" onclick="openModal(this)">
+            <img src="Photos/Personal/P6.jpg" class="wide" onclick="openModal(this)">
+            <img src="Photos/Personal/P7.jpg" class="wide" onclick="openModal(this)">
+            <img src="Photos/Personal/P8.jpg" class="wide" onclick="openModal(this)">
+            <img src="Photos/Personal/P9.jpg" onclick="openModal(this)">
+            <img src="Photos/Personal/P10.jpg" onclick="openModal(this)">
+            <img src="Photos/Personal/P11.jpg" class="wide" onclick="openModal(this)">
+            <img src="Photos/Personal/P12.jpg" onclick="openModal(this)">
+            <img src="Photos/Personal/P13.jpg" onclick="openModal(this)">
+        </div>
     </div>
 
-    <h3 id="students" class="w3-center w3-text-grey">Students</h3>
-    <div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
-      <div class="w3-half">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/falls2.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-        <img src="/w3images/nature.jpg" style="width:100%">
-        <img src="/w3images/mist.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-      </div>
-
-      <div class="w3-half">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-        <img src="/w3images/ocean.jpg" style="width:100%">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/mountainskies.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-      </div>
+    <div class="container">
+        <h3 id="students">Students</h3>
+        <hr>
+        <div class="image-grid">
+            <img src="Photos/Students/S1.jpg" onclick="openModal(this)">
+            <img src="Photos/Students/S2.jpg" onclick="openModal(this)">
+            <img src="Photos/Students/S3.jpg" class="wide" onclick="openModal(this)">
+            <img src="Photos/Students/S4.jpg" onclick="openModal(this)">
+            <img src="Photos/Students/S5.jpg" onclick="openModal(this)">
+            <img src="Photos/Students/S6.jpg" class="wide" onclick="openModal(this)">
+            <img src="Photos/Students/S7.jpg" class="wide" onclick="openModal(this)">
+            <img src="Photos/Students/S8.jpg" class="wide" onclick="openModal(this)">
+            <img src="Photos/Students/S9.jpg" onclick="openModal(this)">
+            <img src="Photos/Students/S10.jpg" onclick="openModal(this)">
+            <img src="Photos/Students/S11.jpg" class="wide" onclick="openModal(this)">
+            <img src="Photos/Students/S12.jpg" onclick="openModal(this)">
+            <img src="Photos/Students/S13.jpg" onclick="openModal(this)">
+        </div>
     </div>
 
-    <h3 id="shoot" class="w3-center w3-text-grey">Shoot</h3>
-    <div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
-      <div class="w3-half">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/falls2.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-        <img src="/w3images/nature.jpg" style="width:100%">
-        <img src="/w3images/mist.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-      </div>
-
-      <div class="w3-half">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/falls2.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-        <img src="/w3images/nature.jpg" style="width:100%">
-        <img src="/w3images/mist.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-      </div>
+    <div class="container">
+        <h3 id="shoot">Photoshoot</h3>
+        <hr>
+        <div class="image-grid">
+            <img src="Photos/Modelling/M1.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M2.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M3.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M4.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M5.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M6.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M10.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M7.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M8.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M13.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M11.jpg" onclick="openModal(this)">
+            <img src="Photos/Modelling/M12.jpg" onclick="openModal(this)">
+        </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-large">
-      <!-- <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p> -->
-    </footer>
+    <!-- Fullscreen Modal -->
+    <div id="imageModal" class="modal" onclick="closeModal()">
+        <span class="close">&times;</span>
+        <img id="modalImg">
+    </div>
 
-</body>
+    <script>
+        function openModal(img) {
+            document.getElementById("imageModal").style.display = "flex";
+            document.getElementById("modalImg").src = img.src;
+        }
+
+        function closeModal() {
+            document.getElementById("imageModal").style.display = "none";
+        }
+    </script>
+
+      <!-- Footer -->
+      <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge">
+
+        <a href="https://www.instagram.com/chitrankan_an_artist?igsh=cWlwMnMza2RkZWFm" target="_blank">
+          <i class="fa fa-instagram w3-hover-opacity" style="font-size: 40px;"></i></a>
+        <a href="https://wa.me/8779655647" target="_blank">
+          <i class="fa fa-whatsapp w3-hover-opacity" style="margin-left: 10px; font-size: 40px;"></i></a>
+        <i class="fa fa-pinterest-p w3-hover-opacity" style="margin-left: 10px; font-size: 40px;"></i>
+        <a href="https://www.linkedin.com/in/chitrankan-mulam-40b592110" target="_blank">
+          <i class="fa fa-linkedin w3-hover-opacity" style="margin-left: 10px; font-size: 40px;"></i></a>
+
+        <!-- End footer -->
+      </footer>
+
+
+    </body>
 
 </html>
