--- a/photos.html
+++ b/photos.html
@@ -151,19 +151,19 @@
         <h3 id="personal">Personal</h3>
         <hr>
         <div class="image-grid">
-            <img src="Photos/Personal/P1.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P2.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P3.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Personal/P4.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P5.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P6.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Personal/P7.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Personal/P8.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Personal/P9.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P10.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P11.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Personal/P12.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P13.jpg" onclick="openModal(this)">
+            <img src="P1.jpg" onclick="openModal(this)">
+            <img src="P2.jpg" onclick="openModal(this)">
+            <img src="P3.jpg" class="wide" onclick="openModal(this)">
+            <img src="P4.jpg" onclick="openModal(this)">
+            <img src="P5.jpg" onclick="openModal(this)">
+            <img src="P6.jpg" class="wide" onclick="openModal(this)">
+            <img src="P7.jpg" class="wide" onclick="openModal(this)">
+            <img src="P8.jpg" class="wide" onclick="openModal(this)">
+            <img src="P9.jpg" onclick="openModal(this)">
+            <img src="P10.jpg" onclick="openModal(this)">
+            <img src="P11.jpg" class="wide" onclick="openModal(this)">
+            <img src="P12.jpg" onclick="openModal(this)">
+            <img src="P13.jpg" onclick="openModal(this)">
         </div>
     </div>
 
@@ -171,19 +171,19 @@
         <h3 id="students">Students</h3>
         <hr>
         <div class="image-grid">
-            <img src="Photos/Students/S1.jpg" onclick="openModal(this)">
-            <img src="Photos/Students/S2.jpg" onclick="openModal(this)">
-            <img src="Photos/Students/S3.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Students/S4.jpg" onclick="openModal(this)">
-            <img src="Photos/Students/S5.jpg" onclick="openModal(this)">
-            <img src="Photos/Students/S6.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Students/S7.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Students/S8.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Students/S9.jpg" onclick="openModal(this)">
-            <img src="Photos/Students/S10.jpg" onclick="openModal(this)">
-            <img src="Photos/Students/S11.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Students/S12.jpg" onclick="openModal(this)">
-            <img src="Photos/Students/S13.jpg" onclick="openModal(this)">
+            <img src="S1.jpg" onclick="openModal(this)">
+            <img src="S2.jpg" onclick="openModal(this)">
+            <img src="S3.jpg" class="wide" onclick="openModal(this)">
+            <img src="S4.jpg" onclick="openModal(this)">
+            <img src="S5.jpg" onclick="openModal(this)">
+            <img src="S6.jpg" class="wide" onclick="openModal(this)">
+            <img src="S7.jpg" class="wide" onclick="openModal(this)">
+            <img src="S8.jpg" class="wide" onclick="openModal(this)">
+            <img src="S9.jpg" onclick="openModal(this)">
+            <img src="S10.jpg" onclick="openModal(this)">
+            <img src="S11.jpg" class="wide" onclick="openModal(this)">
+            <img src="S12.jpg" onclick="openModal(this)">
+            <img src="S13.jpg" onclick="openModal(this)">
         </div>
     </div>
 
@@ -191,18 +191,18 @@
         <h3 id="shoot">Photoshoot</h3>
         <hr>
         <div class="image-grid">
-            <img src="Photos/Modelling/M1.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M2.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M3.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M4.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M5.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M6.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M10.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M7.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M8.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M13.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M11.jpg" onclick="openModal(this)">
-            <img src="Photos/Modelling/M12.jpg" onclick="openModal(this)">
+            <img src="M1.jpg" onclick="openModal(this)">
+            <img src="M2.jpg" onclick="openModal(this)">
+            <img src="M3.jpg" onclick="openModal(this)">
+            <img src="M4.jpg" onclick="openModal(this)">
+            <img src="M5.jpg" onclick="openModal(this)">
+            <img src="M6.jpg" onclick="openModal(this)">
+            <img src="M10.jpg" onclick="openModal(this)">
+            <img src="M7.jpg" onclick="openModal(this)">
+            <img src="M8.jpg" onclick="openModal(this)">
+            <img src="M13.jpg" onclick="openModal(this)">
+            <img src="M11.jpg" onclick="openModal(this)">
+            <img src="M12.jpg" onclick="openModal(this)">
         </div>
     </div>
 
