--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Chitrankan Gallery</title>
+  <title>W3.CSS Template</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -164,6 +164,11 @@
             <img src="P11.jpg" class="wide" onclick="openModal(this)">
             <img src="P12.jpg" onclick="openModal(this)">
             <img src="P13.jpg" onclick="openModal(this)">
+            <div style="text-align: center; ">
+            <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">
+              <a href="https://drive.google.com/drive/folders/1YESC7wrbePnDWsvMnnFIlfdnRROoBjY6?usp=drive_link" target="_blank">LOAD MORE</a>
+            </button>
+            </div>
         </div>
     </div>
 
@@ -184,6 +189,11 @@
             <img src="S11.jpg" class="wide" onclick="openModal(this)">
             <img src="S12.jpg" onclick="openModal(this)">
             <img src="S13.jpg" onclick="openModal(this)">
+            <div style="text-align: center; margin-top: 64px;">
+            <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">
+              <a href="https://drive.google.com/drive/folders/1WJuuSYjCejocH_ZUo7rGSHq0dUbHSwzS?usp=drive_link" target="_blank">LOAD MORE</a>
+            </button>
+            </div>
         </div>
     </div>
 
@@ -203,8 +213,15 @@
             <img src="M13.jpg" onclick="openModal(this)">
             <img src="M11.jpg" onclick="openModal(this)">
             <img src="M12.jpg" onclick="openModal(this)">
+            <div style="text-align: center; margin-top: 64px;">
+            <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px;">
+              <a href="https://drive.google.com/drive/folders/1YdyfQNZX4uLzf2Y8wRCKZbnZY7FGq10Z?usp=drive_link" target="_blank">LOAD MORE</a>
+            </button>
+            </div>
+
         </div>
     </div>
+    
 
     <!-- Fullscreen Modal -->
     <div id="imageModal" class="modal" onclick="closeModal()">
