--- a/photos.html
+++ b/photos.html
@@ -165,7 +165,7 @@
             <img src="P12.jpg" onclick="openModal(this)">
             <img src="P13.jpg" onclick="openModal(this)">
             <div style="text-align: center; ">
-            <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">
+            <button class="w3-button w3-padding-large w3-light-grey" style="">
               <a href="https://drive.google.com/drive/folders/1YESC7wrbePnDWsvMnnFIlfdnRROoBjY6?usp=drive_link" target="_blank">LOAD MORE</a>
             </button>
             </div>
@@ -190,7 +190,7 @@
             <img src="S12.jpg" onclick="openModal(this)">
             <img src="S13.jpg" onclick="openModal(this)">
             <div style="text-align: center; margin-top: 64px;">
-            <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">
+            <button class="w3-button w3-padding-large w3-light-grey" style="">
               <a href="https://drive.google.com/drive/folders/1WJuuSYjCejocH_ZUo7rGSHq0dUbHSwzS?usp=drive_link" target="_blank">LOAD MORE</a>
             </button>
             </div>
@@ -214,7 +214,7 @@
             <img src="M11.jpg" onclick="openModal(this)">
             <img src="M12.jpg" onclick="openModal(this)">
             <div style="text-align: center; margin-top: 64px;">
-            <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px;">
+            <button class="w3-button w3-padding-large w3-light-grey" style="">
               <a href="https://drive.google.com/drive/folders/1YdyfQNZX4uLzf2Y8wRCKZbnZY7FGq10Z?usp=drive_link" target="_blank">LOAD MORE</a>
             </button>
             </div>
