--- a/photos.html
+++ b/photos.html
@@ -151,19 +151,19 @@
         <h3 id="personal">Personal</h3>
         <hr>
         <div class="image-grid">
-            <img src="Photos/Personal/P1.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P2.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P3.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Personal/P4.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P5.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P6.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Personal/P7.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Personal/P8.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Personal/P9.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P10.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P11.jpg" class="wide" onclick="openModal(this)">
-            <img src="Photos/Personal/P12.jpg" onclick="openModal(this)">
-            <img src="Photos/Personal/P13.jpg" onclick="openModal(this)">
+            <img src="P1.jpg" onclick="openModal(this)">
+            <img src="P2.jpg" onclick="openModal(this)">
+            <img src="P3.jpg" class="wide" onclick="openModal(this)">
+            <img src="P4.jpg" onclick="openModal(this)">
+            <img src="P5.jpg" onclick="openModal(this)">
+            <img src="P6.jpg" class="wide" onclick="openModal(this)">
+            <img src="P7.jpg" class="wide" onclick="openModal(this)">
+            <img src="P8.jpg" class="wide" onclick="openModal(this)">
+            <img src="P9.jpg" onclick="openModal(this)">
+            <img src="P10.jpg" onclick="openModal(this)">
+            <img src="P11.jpg" class="wide" onclick="openModal(this)">
+            <img src="P12.jpg" onclick="openModal(this)">
+            <img src="P13.jpg" onclick="openModal(this)">
             <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">
               <a href="https://drive.google.com/drive/folders/1YESC7wrbePnDWsvMnnFIlfdnRROoBjY6?usp=drive_link">LOAD MORE</a>
         </div>
