--- a/index.html
+++ b/index.html
@@ -55,6 +55,29 @@
                 margin-left: 40%;
             }
         }
+         @media (max-width: 600px) {
+                        .w3-sidebar {
+                            width: 100%;
+                        }
+
+                        .w3-main {
+                            margin-left: 0;
+                        }
+
+                        .w3-button {
+                            width: 100%;
+                        }
+                    }
+
+                    @media (min-width: 601px) {
+                        .w3-sidebar {
+                            width: 40%;
+                        }
+
+                        .w3-main {
+                            margin-left: 40%;
+                        }
+                    }
     </style>
 </head>
 
