--- a/index.html
+++ b/index.html
@@ -55,29 +55,6 @@
                 margin-left: 40%;
             }
         }
-         @media (max-width: 600px) {
-                        .w3-sidebar {
-                            width: 100%;
-                        }
-
-                        .w3-main {
-                            margin-left: 0;
-                        }
-
-                        .w3-button {
-                            width: 100%;
-                        }
-                    }
-
-                    @media (min-width: 601px) {
-                        .w3-sidebar {
-                            width: 40%;
-                        }
-
-                        .w3-main {
-                            margin-left: 40%;
-                        }
-                    }
     </style>
 </head>
 
@@ -114,18 +91,22 @@
 
         <!-- Header -->
        <header class="w3-container w3-center" style="padding:128px 16px" id="home">
-    <h1 class="w3-jumbo"><b>CHITRANKAN MULAM</b></h1>
+    <h1 class="w4-jumbo"><b>CHITRANKAN MULAM</b></h1>
     <h5>ARTIST | ART/ICT TEACHER | DESIGNER | MODEL</h5>
+
+    <img src="Photos/Chitrankan01192.jpg" class="w3-image w3-responsive w3-center w3-round"
+        style="max-width: 60%; display: block; margin: auto;" alt="Chitrankan Mulam">
     
-    <!-- Responsive images -->
-    <img src="Photos/Chitrankan01192.jpg" alt="Chitrankan Mulam" class="w3-image w3-round" style="width:60%; max-width:600px; margin:auto;">
+    <img src="Photos/Chitrankan01192.jpg" class="w3-image w3-responsive w3-center w3-round"
+        style="max-width: 1000px; height: auto;" alt="Chitrankan Mulam">
     
-    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-        <a href="Chitrankan Mulam CV 2025.pdf" download="Chitrankan Mulam" style="text-decoration: none; color: inherit;">
+    <a href="Chitrankan Mulam CV 2025.pdf" download="Chitrankan Mulam">
+        <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
             <i class="fa fa-download"></i> Download Resume
-        </a>
-    </button>
+        </button>
+    </a>
 </header>
+
 
 
         <!-- About Section -->
