--- a/index.html
+++ b/index.html
@@ -90,18 +90,25 @@
             onclick="openNav()"><i class="fa fa-bars"></i></span>
 
         <!-- Header -->
-       <header class="w3-container w3-center" style="padding:128px 16px" id="home">
-            <h1 class="w4-jumbo"><b>CHITRANKAN MULAM</b></h1>
-            <h5>ARTIST | ART/ICT TEACHER | DESIGNER | MODEL</h5>
-            <img src="Photos/Chitrankan01192.jpg" class="w3-image w3-hide-large w3-hide-small w3-round"
-                style="display:block;width:60%;margin:auto;">
-            <img src="Photos/Chitrankan01192.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000"
-                height="1333">
-            <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-                <a href="Chitrankan Mulam CV 2025.pdf" download="Chitrankan Mulam">
-                    <i class="fa fa-download"></i> Download Resume
-            </button></a>
-        </header>
+      <header class="w3-container w3-center" style="padding:128px 16px" id="home">
+    <h1 class="w4-jumbo"><b>CHITRANKAN MULAM</b></h1>
+    <h5>ARTIST | ART/ICT TEACHER | DESIGNER | MODEL</h5>
+
+    <!-- Responsive Image -->
+    <img src="Photos/Chitrankan01192.jpg" class="w3-image w3-responsive w3-round"
+        style="max-width: 60%; display: block; margin: auto;" alt="Chitrankan Mulam">
+    
+    <!-- Larger image for bigger screens -->
+    <img src="Photos/Chitrankan01192.jpg" class="w3-image w3-responsive w3-round"
+        style="max-width: 1000px; height: auto; display: block; margin: auto;" alt="Chitrankan Mulam">
+
+    <!-- Resume Download Button -->
+    <a href="Chitrankan Mulam CV 2025.pdf" download="Chitrankan Mulam">
+        <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
+            <i class="fa fa-download"></i> Download Resume
+        </button>
+    </a>
+</header>
 
 
 
