--- a/index.html
+++ b/index.html
@@ -94,13 +94,10 @@
     <h1 class="w4-jumbo"><b>CHITRANKAN MULAM</b></h1>
     <h5>ARTIST | ART/ICT TEACHER | DESIGNER | MODEL</h5>
 
-    <!-- Responsive Image -->
+    <!-- Single Responsive Image -->
     <img src="Photos/Chitrankan01192.jpg" class="w3-image w3-responsive w3-round"
-        style="max-width: 60%; display: block; margin: auto;" alt="Chitrankan Mulam">
-    
-    <!-- Larger image for bigger screens -->
-    <img src="Photos/Chitrankan01192.jpg" class="w3-image w3-responsive w3-round"
-        style="max-width: 1000px; height: auto; display: block; margin: auto;" alt="Chitrankan Mulam">
+        style="max-width: 100%; height: auto; display: block; margin: auto;" 
+        alt="Chitrankan Mulam">
 
     <!-- Resume Download Button -->
     <a href="Chitrankan Mulam CV 2025.pdf" download="Chitrankan Mulam">
