--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <!-- Header -->
    <header class="w3-container w3-center" style="padding:128px 16px" id="home">
             <h1 class="w4-jumbo"><b>CHITRANKAN MULAM</b></h1>
-            <p>ARTIST | ART/ICT TEACHER | DESIGNER | MODEL</p>
+            <h6>ARTIST | ART/ICT TEACHER | DESIGNER | MODEL</h6>
             <img src="Chitrankan01192.jpg" class="w3-image w3-hide-large w3-hide-small w3-round"
                 style="display:block;width:60%;margin:auto;">
             <img src="Chitrankan01192.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000"
