--- a/index.html
+++ b/index.html
@@ -467,15 +467,15 @@
       <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
 
         <a href="https://www.instagram.com/chitrankan_an_artist?igsh=cWlwMnMza2RkZWFm" target="_blank">
-          <i class="fa fa-instagram w3-hover-opacity" style="font-size: 40px;"></i></a>
+            <i class="fa fa-instagram w3-hover-opacity" style="margin-left: 40%; font-size: 40px;"></i></a>
         <a href="https://wa.me/8779655647" target="_blank">
-          <i class="fa fa-whatsapp w3-hover-opacity" style="margin-left: 10px; font-size: 40px;"></i></a>
+            <i class="fa fa-whatsapp w3-hover-opacity" style="margin-left: 10px; font-size: 40px;"></i></a>
         <i class="fa fa-pinterest-p w3-hover-opacity" style="margin-left: 10px; font-size: 40px;"></i>
         <a href="https://www.linkedin.com/in/chitrankan-mulam-40b592110" target="_blank">
-          <i class="fa fa-linkedin w3-hover-opacity" style="margin-left: 10px; font-size: 40px;"></i></a>
+            <i class="fa fa-linkedin w3-hover-opacity" style="margin-left: 10px; font-size: 40px;"></i></a>
 
         <!-- End footer -->
-      </footer>
+    </footer>
 
     
 
