--- a/index.html
+++ b/index.html
@@ -464,15 +464,17 @@
     </div>
     <!-- Footer -->
     <hr>
-      <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
-    <div style="display: flex; justify-content: center; gap: 15px; align-items: center; flex-wrap: wrap;">
+     <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge">
+    <div style="display: flex; justify-content: center; gap: 20px; align-items: center; flex-wrap: wrap;">
         <a href="https://www.instagram.com/chitrankan_an_artist?igsh=cWlwMnMza2RkZWFm" target="_blank">
             <i class="fa fa-instagram w3-hover-opacity" style="font-size: 40px;"></i>
         </a>
         <a href="https://wa.me/8779655647" target="_blank">
             <i class="fa fa-whatsapp w3-hover-opacity" style="font-size: 40px;"></i>
         </a>
-        <i class="fa fa-pinterest-p w3-hover-opacity" style="font-size: 40px;"></i>
+        <a href="#" target="_blank">
+            <i class="fa fa-pinterest-p w3-hover-opacity" style="font-size: 40px;"></i>
+        </a>
         <a href="https://www.linkedin.com/in/chitrankan-mulam-40b592110" target="_blank">
             <i class="fa fa-linkedin w3-hover-opacity" style="font-size: 40px;"></i>
         </a>
