--- a/photos.html
+++ b/photos.html
@@ -245,7 +245,7 @@
 
         <a href="https://www.instagram.com/chitrankan_an_artist?igsh=cWlwMnMza2RkZWFm" target="_blank">
           <i class="fa fa-instagram w3-hover-opacity" style="font-size: 40px;"></i></a>
-        <a href="https://wa.me/8779655647" target="_blank">
+        <a href="https://wa.me/+91 8779655647" target="_blank">
           <i class="fa fa-whatsapp w3-hover-opacity" style="margin-left: 10px; font-size: 40px;"></i></a>
         <i class="fa fa-pinterest-p w3-hover-opacity" style="margin-left: 10px; font-size: 40px;"></i>
         <a href="https://www.linkedin.com/in/chitrankan-mulam-40b592110" target="_blank">
