--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     </div>
     <!-- Footer -->
     <hr>
-  <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge">
+  <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
 
         <a href="https://www.instagram.com/chitrankan_an_artist?igsh=cWlwMnMza2RkZWFm" target="_blank">
           <i class="fa fa-instagram w3-hover-opacity" style="font-size: 40px;"></i></a>
